[DI-179]: update controller class name in configuration

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -49,7 +49,7 @@ play.http.router = prod.Routes
 # The below controllers are the default exceptions to this rule.
 
 controllers {
-  uk.gov.hmrc.saliabilitiessandpitstubs.controllers.MicroserviceHelloWorldController = {
+  uk.gov.hmrc.saliabilitiessandpitstubs.controllers.BalanceController = {
     needsAuth = false
     needsLogging = false
     needsAuditing = false
