[DI-253]:Feature Toggle and Authentication Check for Stub

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -58,6 +58,10 @@ controllers {
 
 # Microservice specific config
 
+feature-toggles {
+  new-auth-check-enabled = true
+}
+
 
 microservice {
   services {
