[DI-296]: Enhance BalanceDetail model to support missing fields and customizable behavior

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -62,8 +62,22 @@ feature-toggles {
   new-auth-check-enabled = true
 }
 
-random {
-  seed = 42
+generator {
+    random {
+      seed = 42
+    }
+    default = "fake"
+    request {
+        header = "X-USE-STRATEGY-GENERATION"
+    }
+}
+
+
+validation {
+    balance {
+        enable = true
+        fields = ["pendingDueAmount", "overdueAmount", "payableAmount"]
+    }
 }
 
 microservice {
