[DI-296]: Create new routes to update and delete details additionally create SystemLocalDate

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -66,6 +66,8 @@ generator {
     random {
       seed = 42
     }
+    time = "fake"
+    date = "1993-11-13"
     default = "fake"
     request {
         header = "X-USE-STRATEGY-GENERATION"
