[DI-296]: Create new network simulation strategies

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -66,6 +66,18 @@ generator {
     random {
       seed = 42
     }
+    network {
+       strategy = "discrete"
+
+       failureProbability {
+        failure = 0.15
+        randomDelay = 0.15
+        throttling = 0.15
+        timeout = 0.15
+        standardDeviation = 0.73
+        mean = 0.37
+       }
+    }
     time = "fake"
     date = "1993-11-13"
     default = "fake"
