--- a/conf/application.conf
+++ b/conf/application.conf
@@ -59,7 +59,7 @@ controllers {
 # Microservice specific config
 
 feature-toggles {
-  new-auth-check-enabled = true
+  new-auth-check-enabled = false
 }
 
 generator {
